Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • Settings Settings
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 965
    • Issues 965
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 66
    • Merge requests 66
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • SettingsSettings
  • Issues
  • #170

Closed
Open
Created Aug 29, 2018 by Frank Brütting@fbruetting🤘

Folders can’t be excluded from search

Steps to reproduce:

  1. Open GNOME Settings.
  2. Go to Search pane, select the wheel at the bottom and the Other pane.
  3. Add a folder and deactivate it

⇒ Folder entry disappears instead of being excluded from search.

g-c-c v3.28.2
● ostree://fedora-workstation:fedora/28/x86_64/workstation
                   Version: 28.20180828.1 (2018-08-28 23:49:23)
                BaseCommit: 5a5b8d8ff45989c504834d742629532df1162658e9bdefb6cd6e5cde2a0ca875
              GPGSignature: Valid signature by 128CF232A9371991C8A65695E08E7E629DB62FB1
           LayeredPackages: adapta-gtk-theme adobe-source-code-pro-fonts
                            adobe-source-sans-pro-fonts adobe-source-serif-pro-fonts
                            android-tools chrome-gnome-shell chromium cockpit dconf-editor
                            dnf easytag exa exfat-utils fd-find fedora-repos-modular ffmpeg
                            ffmpeg-libs gcolor2 gdb git glances gnome-encfs-manager
                            gnome-tweaks gnome-usage gpick hack-fonts htop iftop julia
                            linux-libertine-biolinum-fonts linux-libertine-fonts mosh
                            mozilla-fira-mono-fonts mozilla-fira-sans-fonts neovim
                            powerline-go pv pygobject3 python3-matplotlib ripgrep
                            setroubleshoot task tilix tilix-nautilus tmux tokei
                            xenlism-wildfire xenlism-wildfire-midnight youtube-dl zsh
             LocalPackages: rpmfusion-free-release-28-1.noarch
                            rpmfusion-nonfree-release-28-1.noarch
Edited Aug 29, 2018 by Frank Brütting
Assignee
Assign to
Time tracking