search-locations-dialog: Don't show switch for other places

For other places there a switch and a remove button, they both effectively
don't the same thing. Don't show the switch because it's
confusing and leads to a weird behavior where the row instantly
disappears.

Related: https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/170